k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-hub-service
  namespace: devops-hub
spec:
  type: NodePort
  selector:
    app: devops-hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30500
